--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"id": "obsidian-vue-template",
+	"name": "Vue Template",
+	"version": "0.0.1",
+	"minAppVersion": "0.12.0",
+	"description": "for test",
+	"author": "the_tree",
+	"authorUrl": "",
+	"isDesktopOnly": true
 }
